# SteeringAnalysis

./: .gitignore  .ignore  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: angular_steering.md  assumption1_verification.md  contrast_verification.md  full_steering.md  prefix_steering.md
results/: assumption1_report.md  steering_methods_comparison.md
results/assumption1/: polite_EleutherAI_pythia-160m-deduped_angular_cosine_matrices.pt  polite_EleutherAI_pythia-160m-deduped_angular_full_results.json  polite_EleutherAI_pythia-160m-deduped_cosine_matrices.pt  polite_EleutherAI_pythia-160m-deduped_full_results.json  polite_EleutherAI_pythia-160m-deduped_prefix10_cosine_matrices.pt  polite_EleutherAI_pythia-160m-deduped_prefix10_full_results.json  polite_EleutherAI_pythia-160m-deduped_prefix10_summary.json  polite_EleutherAI_pythia-160m-deduped_summary.json  polite_EleutherAI_pythia-410m-deduped_angular_cosine_matrices.pt  polite_EleutherAI_pythia-410m-deduped_angular_full_results.json  polite_EleutherAI_pythia-410m-deduped_angular_summary.json  polite_EleutherAI_pythia-410m-deduped_cosine_matrices.pt  polite_EleutherAI_pythia-410m-deduped_full_results.json  (+65 more)
scripts/: apply_steering.py  extract_vectors.py  verify_assumption1.py  verify_contrast_pairs.py
src/steering_analysis/: config.py  (+8 more)
tests/: conftest.py  test_aggregators.py  test_assumption_verification.py  test_config.py  test_contrast_verification.py  test_dataset_loaders.py  test_extract.py  test_generate_steering.py  test_models.py  test_steering.py  test_types.py  test_utils.py
(+27 files in other folders)
