[project]
name = "steeringanalysis"
version = "0.1.0"
description = "Concept vector extraction for activation steering analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.40.0",
    "datasets>=2.16,<4.0",
    "scikit-learn>=1.4,<2.0",
    "numpy>=1.26,<3.0",
    "accelerate>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steering_analysis"]
